--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
         completions."
     </string>
     <string name="title_activity_login2">Sign in</string>
+    <string name="to_kotlint">To_Kotlint</string>
+    <string name="to_java">To_Java</string>
 </resources>
